--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "axios": "^1.10.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
